# agents-sdk-course

./: .gitignore  README.md  env.example  pyproject.toml
assets/: ev-guardrails.json  skynet-fy25-q1.md
chapters/: 01-prompting.ipynb  02-tracing.ipynb  03-tools.ipynb  04-multi-agent.ipynb  05-guardrails.ipynb  05-handoffs.ipynb  06-streaming.ipynb  07-voice.ipynb  08-alt-models.ipynb  09-rag-agent.ipynb  09-research-agent.ipynb  10-rag-agent.ipynb
notebooks/: 08-alt-models.ipynb  agents-sdk-guardrails.ipynb  agents-sdk-handoff.ipynb  agents-sdk-prompting.ipynb  agents-sdk-tools.ipynb  alternate-models.ipynb  guardrails.ipynb  handoffs.ipynb  streaming.ipynb  tracing.ipynb  voice.ipynb
