[project]
name = "agents-sdk-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "openai>=1.68.2",
    "openai-agents[voice]==0.0.12",
    "sounddevice>=0.5.1",
]
